# auto-ai-flow

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  constants.py  exceptions.py  logging.py  middleware.py  response.py  security.py
backend/app/db/: base.py  session.py
backend/app/runtime/: agent_runner.py  code_skill_runner.py  condition_evaluator.py  context_manager.py  execution_mode_resolver.py  handoff_builder.py  model_resolver.py  node_executor_factory.py  normal_agent_runner.py  prompt_builder.py  tool_runner.py  workflow_executor.py
backend/app/schemas/: __init__.py  agent.py  auth.py  code_runtime.py  common.py  execution.py  model.py  project.py  role_template.py  runtime.py  skill.py  tool.py  workflow.py
backend/app/seeds/: builtin_models.py  builtin_role_templates.py  builtin_skills.py  builtin_tools.py  seed_runner.py
backend/app/services/: agent_service.py  artifact_service.py  auth_service.py  code_runtime_service.py  execution_service.py  model_service.py  project_service.py  workflow_service.py
backend/app/tasks/: callbacks.py  celery_app.py  run_tasks.py  workflow_tasks.py
backend/app/utils/: crypto.py  json.py  pagination.py  time.py
backend/tests/: conftest.py
backend/tests/contract/: test_agent_schema.py  test_agent_schema_v11.py  test_auth_schema.py  test_code_runtime_schema.py  test_common_schema.py  test_execution_schema.py  test_model_schema.py  test_project_schema.py  (+4 more)
(+245 files in other folders)
